--- a/main.css
+++ b/main.css
@@ -7,3 +7,28 @@
 article, aside, details, figcaption, figure, footer, header, main, nav, section, summary {
     display:block;
 }
+
+
+/* FONTS
+
+font-family: 'Rajdhani', sans-serif;
+font-family: 'Hind Madurai', sans-serif;
+
+*/
+
+h1, h2, h3 {
+  font-family: 'Rajdhani', sans-serif;
+}
+
+p, nav ul li {
+  font-family: 'Hind Madurai', sans-serif;
+}
+
+header, footer {
+  background-color: #000080;
+  color: #ffffff;
+}
+
+body {
+  background-color: #32CD32;
+}
