Add padding and place footer at the bottom

--- a/main.css
+++ b/main.css
@@ -16,8 +16,29 @@ font-family: 'Hind Madurai', sans-serif;
 
 */
 
+nav ul {
+	list-style-type: none;
+  text-align: center;
+  padding-bottom: 1%;
+}
+
+nav ul li {
+	display: inline;
+  padding-right: 2%;
+
+}
+
+nav a:link, a:visited {
+  color: #ffffff;
+}
+
 h1, h2, h3 {
   font-family: 'Rajdhani', sans-serif;
+  padding: 1%;
+}
+
+h3 {
+  text-align: center;
 }
 
 p, nav ul li {
@@ -31,4 +52,13 @@ header, footer {
 
 body {
   background-color: #32CD32;
+  height: 100%;
+}
+
+main {
+  height: 100vh; 
+}
+
+p {
+  padding: 0 0 1% 2%;
 }
